--- a/Notebook/WGAN.ipynb
+++ b/Notebook/WGAN.ipynb
@@ -36,8 +36,8 @@
    "source": [
     "data_folder = \"/home/dhawi/Documents/dataset\"\n",
     "dataset = data_folder + \"/AI_project\"\n",
-    "model_folder = \"/home/dhawi/Documents/model\"\n",
-    "history_folder = \"/home/dhawi/Documents/History\""
+    "model_folder = \"/home/dhawi/FYP/models\"\n",
+    "history_folder = \"/home/dhawi/FYP/History\""
    ]
   },
   {
@@ -104,6 +104,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def show_images(images):\n",
+    "    for i in range(20):\n",
+    "        plt.subplot(4, 5, i + 1)\n",
+    "        plt.imshow(images[i])\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
+    "    plt.show()\n",
+    "# show_images(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from keras import ops\n",
     "class Sampling(layers.Layer):\n",
     "    \"\"\"Uses (z_mean, z_log_var) to sample z, the vector encoding a digit.\"\"\"\n",
@@ -118,22 +134,6 @@
     "        dim = ops.shape(z_mean)[1]\n",
     "        epsilon = keras.random.normal(shape=(batch, dim), seed=self.seed_generator)\n",
     "        return z_mean + ops.exp(0.5 * z_log_var) * epsilon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def show_images(images):\n",
-    "    for i in range(20):\n",
-    "        plt.subplot(4, 5, i + 1)\n",
-    "        plt.imshow(images[i])\n",
-    "        plt.xticks([])\n",
-    "        plt.yticks([])\n",
-    "    plt.show()\n",
-    "# show_images(X_train)"
    ]
   },
   {
@@ -163,6 +163,16 @@
     "        layers.Dense(1)  # Output single value (validity score)\n",
     "    ])\n",
     "    return Discriminator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Discriminator = build_discriminator()\n",
+    "Discriminator.summary()"
    ]
   },
   {
@@ -207,11 +217,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Generator = build_generator()\n",
+    "Generator.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class WGAN(Model):\n",
-    "    def __init__(self, generator, discriminator, latent_dim, lambda_gp=10):\n",
+    "    def __init__(self, generator, discriminator, encoder, decoder, latent_dim = 1024, lambda_gp=10):\n",
     "        super(WGAN, self).__init__()\n",
     "        self.generator = generator\n",
     "        self.discriminator = discriminator\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
     "        self.latent_dim = latent_dim\n",
     "        self.lambda_gp = lambda_gp\n",
     "        self.history = {\"Generator Loss\": [], \"Discriminator Loss\": []}\n",
@@ -298,12 +320,27 @@
     "    decoder = keras.src.saving.load_model(vae_decoder, compile=False)\n",
     "    Generator = build_generator()\n",
     "    Discriminator = build_discriminator()\n",
-    "    edgan_model = EDGAN(Generator, Discriminator, encoder, decoder)\n",
+    "    edgan_model = WGAN(Generator, Discriminator, encoder, decoder)\n",
     "    edgan_model.compile(gen_optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0001),\n",
     "                  disc_optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0001),\n",
     "                  criterion = tf.keras.losses.BinaryCrossentropy(True))\n",
     "    \n",
     "    return edgan_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(model, model_name):\n",
+    "    generator_path = model_folder + \"/\" + model_name + \"_generator.h5\"\n",
+    "    discriminator_path = model_folder + \"/\" + model_name + \"_discriminator.h5\"\n",
+    "    model_path = model_folder + \"/\" + model_name + \"_model.h5\"\n",
+    "    model.generator.save(generator_path)\n",
+    "    model.discriminator.save(discriminator_path)\n",
+    "    model.save(model_path)"
    ]
   },
   {
@@ -337,13 +374,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_model(model, model_name):\n",
-    "    generator_path = model_folder + \"/\" + model_name + \"_encoder.h5\"\n",
-    "    discriminator_path = model_folder + \"/\" + model_name + \"_decoder.h5\"\n",
-    "    model_path = model_folder + \"/\" + model_name + \"_model.h5\"\n",
-    "    model.generator.save(generator_path)\n",
-    "    model.discriminator.save(discriminator_path)\n",
-    "    model.save(model_path)"
+    "caries_wgan = build_model(\"caries\")\n",
+    "caries_wgan_history = caries_wgan.fit(caries, epochs = 1000, batch_size = 50)\n",
+    "save_model(caries_wgan, \"caries_WGAN\")"
    ]
   },
   {
@@ -352,20 +385,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the models\n",
-    "generator = build_generator()\n",
-    "discriminator = build_discriminator()\n",
-    "\n",
-    "# Optimizers\n",
-    "optimizer_G = tf.keras.optimizers.Adam(learning_rate=opt.lr, beta_1=opt.b1, beta_2=opt.b2)\n",
-    "optimizer_D = tf.keras.optimizers.Adam(learning_rate=opt.lr, beta_1=opt.b1, beta_2=opt.b2)\n",
-    "\n",
-    "# Loss functions\n",
-    "def d_loss_fn(real_validity, fake_validity, gradient_penalty_loss):\n",
-    "    return -tf.reduce_mean(real_validity) + tf.reduce_mean(fake_validity) + lambda_gp * gradient_penalty_loss\n",
-    "\n",
-    "def g_loss_fn(fake_validity):\n",
-    "    return -tf.reduce_mean(fake_validity)"
+    "show_history(caries_wgan_history, \"caries_WGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gingivitis_wgan = build_model(\"gingivitis\")\n",
+    "gingivitis_wgan_history = gingivitis_wgan.fit(gingivitis, epochs = 1000, batch_size = 50)\n",
+    "save_model(gingivitis_wgan, \"gingivitis_WGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_history(gingivitis_wgan_history, \"gingivitis_WGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wsl_wgan = build_model(\"wsl\")\n",
+    "wsl_wgan_history = wsl_wgan.fit(wsl, epochs = 1000, batch_size = 50)\n",
+    "save_model(wsl_wgan, \"wsl_WGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_history(wsl_wgan_history, \"wsl_WGAN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_noise\n",
+    "y_pred = caries_wgan.generator.predict(fixed_noise)\n",
+    "show_images(y_pred)"
    ]
   }
  ],
